
- Issue #6639: Module-level turtle functions no longer raise TclError after
  closing the window.

- Issue #22314: pydoc now works when the LINES environment variable is set.

- Issue #18905: "pydoc -p 0" now outputs actually used port.  Based on patch by
  Wieland Hoffmann.

- Issue #23345: Prevent test_ssl failures with large OpenSSL patch level
  values (like 0.9.8zc).

Tests
-----

- Issue #22390: test.regrtest now emits a warning if temporary files or
  directories are left after running a test.

- Issue #23583: Added tests for standard IO streams in IDLE.

- Issue #23392: Added tests for marshal C API that works with FILE*.

- Issue #18982: Add tests for CLI of the calendar module.

- Issue #19949: The test_xpickle test now tests compatibility with installed
  Python 2.7 and reports skipped tests.  Based on patch by Zachary Ware.

- Issue #11578: Backported test for the timeit module.

- Issue #22943: bsddb tests are locale independend now.

IDLE
----

- Issue #23583: Fixed writing unicode to standard output stream in IDLE.

- Issue #20577: Configuration of the max line length for the FormatParagraph
  extension has been moved from the General tab of the Idle preferences dialog
  to the FormatParagraph tab of the Config Extensions dialog.
  Patch by Tal Einat.

- Issue #16893: Update Idle doc chapter to match current Idle and add new
  information.

- Issue #23180: Rename IDLE "Windows" menu item to "Window".
  Patch by Al Sweigart.

Build
-----

- Issue #15506: Use standard PKG_PROG_PKG_CONFIG autoconf macro in the configure
  script.

- Issue #23032: Fix installer build failures on OS X 10.4 Tiger
  by disabling assembly code in the OpenSSL build.

- Issue #23686: Update OS X 10.5 installer build to use OpenSSL 1.0.2a.

C API
-----

- Issue #22079: PyType_Ready() now checks that statically allocated type has
  no dynamically allocated bases.


What's New in Python 2.7.9?
===========================

*Release date: 2014-12-10*

Library
-------
