@@ -182,6 +182,9 @@ Tools/Demos
 Tests
 -----
 
+- Issue #23799: Added test.test_support.start_threads() for running and
+  cleaning up multiple threads.
+
 - Issue #22390: test.regrtest now emits a warning if temporary files or
   directories are left after running a test.
 
